# computational-caricaturization

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
demo/: main.cpp
include/: compcari.hpp
src/: compcari.cpp
